# component-embeddings-v2

./: .gitignore  Dockerfile  README.md  llm.md  pyproject 2.toml  pyproject.toml  requirements.txt
.github/actions/check-version-change/: action.yml
.github/workflows/: app-embeddings-v2.yml  common-component-workflow.yml  push.yml  wr-pgvector-embeddings.yml  wr-pinecone-embeddings.yml  wr-qdrant-embeddings.yml
component_config/: configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  sourceCodeUrl.md
components/_common/: flake8.cfg  pyproject.toml
components/_common/src/: component.py  configuration.py  exceptions.py
components/_common/src/services/: csv_manager.py  embedding_manager.py  vector_store_manager.py
components/_common/tests/: docker-compose.yml  fetch_pgvector_data.py  test_component.py
components/_common/tests/mocks/openai/: Dockerfile  requirements.txt  server.py
components/app-embeddings-v2/: Dockerfile  README.md  docker-compose.yml
components/app-embeddings-v2/component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md
components/app-embeddings-v2/tests/: test_functional.py
components/wr-pgvector-embeddings/: Dockerfile  README.md  docker-compose.yml
components/wr-pgvector-embeddings/component_config/: component_long_description.md  component_short_description.md  (+3 more)
components/wr-pinecone-embeddings/: Dockerfile  README.md  docker-compose.yml
components/wr-qdrant-embeddings/: Dockerfile  README.md  docker-compose.yml
src/: __init__.py  component.py  configuration.py  utils.py
src/services/: __init__.py  csv_manager.py  embedding_manager.py  vector_store_manager.py
tests/: docker-compose.yml
(+38 files in other folders)
