[project]
name = "keboola-app-embeddings-v2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "freezegun>=1.5.1",
    "greenlet>=3.1.1",
    "keboola-component>=1.6.10",
    "langchain-aws>=0.2.12",
    "langchain-cohere>=0.4.2",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.34",
    "langchain-google-vertexai>=2.0.13",
    "langchain-huggingface>=0.1.2",
    "langchain-milvus>=0.1.8",
    "langchain-openai>=0.3.4",
    "langchain-pinecone>=0.2.2",
    "langchain-postgres>=0.0.13",
    "langchain-qdrant>=0.2.0",
    "langchain-redis>=0.1.2",
    "mock>=5.1.0",
    "opensearch-py>=2.8.0",
    "psycopg-binary>=3.2.4",
]
